syntax = "proto3";
package pb;
// protoc --go_out=./ --go-grpc_out=./ catalog.proto
option go_package = "./pb";

message Product {
  string productId = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string category = 5;
  string imageURL = 6;
  string sellerId = 7;
  string sellerName = 8;
  repeated string locations = 9;
}

message PostProductRequest {
  string title = 1;
  string description = 2;
  double price = 3;
  string category = 4;
  string sellerId = 5;
  uint64 availableQuantity = 6;
  repeated string locations = 7;
}

message PostProductResponse {
  Product product = 1;
  string message = 2;
}

message GetProductRequest {
  string id = 1;
}

message GetProductResponse {
  Product product = 1;
}

message GetProductsRequest {
  uint64 skip = 1;
  uint64 take = 2;
  repeated string ids = 3;
  string query = 4;
}

message GetProductsResponse {
  repeated Product products = 1;
}

service CatalogService {
  rpc PostProduct(PostProductRequest) returns (PostProductResponse) {}
  rpc GetProduct(GetProductRequest) returns (GetProductResponse) {}
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {}
}